//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  firstName String [not null]
  lastName String
  username String [unique, not null]
  email String [unique, not null]
  hashedPassword Bytes [not null]
  bio String
  avatar String
  posts Post [not null]
  likes Like [not null]
  comments Comment [not null]
  followers User [not null]
  following User [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  sessions Session [not null]
}

Table Session {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  expiresAt DateTime
  user User [not null]
  userId String [not null]
}

Table Post {
  id String [pk]
  user User [not null]
  userId String [not null]
  image String
  caption String
  likes Like [not null]
  hashtags Hashtag [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  comments Comment [not null]
}

Table Like {
  id String [pk]
  post Post [not null]
  user User [not null]
  postId String [not null]
  userId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (postId, userId) [unique]
  }
}

Table Hashtag {
  id String [pk]
  hashtag String [unique, not null]
  posts Post [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Comment {
  id String [pk]
  user User [not null]
  userId String [not null]
  post Post [not null]
  postId String [not null]
  body String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Foo {
  id Int [pk, increment]
  name String [not null]
  bars Bar [not null]
}

Table Bar {
  id Int [pk, increment]
  foo Foo [not null]
  fooId Int [not null]
  text String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table FollowRelation {
  followersId String [ref: > User.id]
  followingId String [ref: > User.id]
}

Table HashtagToPost {
  hashtagsId String [ref: > Hashtag.id]
  postsId String [ref: > Post.id]
}

Ref: Session.userId > User.id

Ref: Post.userId > User.id

Ref: Like.postId > Post.id

Ref: Like.userId > User.id

Ref: Comment.userId > User.id

Ref: Comment.postId > Post.id

Ref: Bar.fooId > Foo.id